Fixes to INSPIRE profile sample files

--- a/data_dir/metadata/metadata_nl.properties
+++ b/data_dir/metadata/metadata_nl.properties
@@ -49,7 +49,7 @@ metadata.generated.form.explanation=Uitleg *
 metadata.generated.form.pass=Conform verklaard *
 metadata.generated.form.resolution-equivalent-scale=Toepassingsschaal 1 : 
 metadata.generated.form.graphic-overview-url=GetMap-URL van voorbeeldafbeelding
-metadata.generated.form.topic-category=Categorieën *
+metadata.generated.form.topic-category=Categorien *
 metadata.generated.form.data-valid-date=Temporele begrenzing
 metadata.generated.form.start-date=Startdatum
 metadata.generated.form.end-date=Einddatum
@@ -87,15 +87,13 @@ metadata.generated.form.feature-type-definition=Definitie van objecttype
 metadata.generated.form.feature-attribute=Attributen
 
 # Dropdown values
-metadata.generated.form.metadata-language-code.dut=Nederlands
 metadata.generated.form.metadata-language-code.eng=Engels
 metadata.generated.form.metadata-language-code.fre=Frans
-metadata.generated.form.metadata-language-code.ger=Duits
+metadata.generated.form.metadata-language-code.spa=Spaans
 
-metadata.generated.form.data-language-code.dut=Nederlands
 metadata.generated.form.data-language-code.eng=Engels
 metadata.generated.form.data-language-code.fre=Frans
-metadata.generated.form.data-language-code.ger=Duits
+metadata.generated.form.data-language-code.spa=Spaans
 
 metadata.generated.form.topic-category.farming=Landbouw en veeteelt
 metadata.generated.form.topic-category.biota=Biota
